- display URLs of packages (#40571)
- handle gracefully locked RPM DB when trying to install some packages
  (#40244)
- rpmdrake:
  o do not list backports as unselected updates media in rpmdrake, not
    just in MandrivaUpdate (#35009, #40556)
  o fix a crash when default view is unknown (#40025)
  o fix searching when numeric pad's return key is pressed

Version 4.9.13 - 3 April 2008, Thierry Vignaud

- updated translations

Version 4.9.12 - 1 April 2008, Thierry Vignaud

- better error message while downloading mirror list (#39675)
- rpmdrake:
  o fix view tooltip (#39694)
  o really make "by update availability" view usable (#39461)
  o split out installed packages if any in "by update availability" view

Version 4.9.11 - 1 April 2008, Thierry Vignaud

- rpmdrake:
  o really remove "--emmbedded <id>" from ARGV when restarting after
    priority upgrades, thus fixing displaying it when run from mcc
    (#39262)

Version 4.9.10 - 30 March 2008, Thierry Vignaud

- rpmdrake:
  o do not crash if package is unknow (#39608)
  o do not crash if config file set empty values for some variables
    (eg: after old buggy gurpmi.addmedia garbaged it) (#39511)
  o fix priority upgrades:
    * do not preselect updates
    * do not recompute them when checking selection consistency just
      before actually installing

Version 4.9.9 - 28 March 2008, Thierry Vignaud

- gurpmi.addmedia:
  o handle --mirrorlist (Anssi)
  o drop 'with' parameter, it didn't work properly anymore (Anssi)
  o do not garbage ~/.rpmdrake
  o fix --distrib
  o fix --distrib --mirrorlist
- rpmdrake:
  o make "by update availability" view usable (#39461)

Version 4.9.8 - 25 March 2008, Thierry Vignaud

- ensure we always restart if needed
- fix displaying garbaged UTF-8 descriptions (eg: cgoban1)
  (instead of displaying "none")
- remove "--emmbedded <id>" from ARGV when restarting after priority
  upgrades, thus fixing displaying it when run from mcc (#39262)