@@ -1,6 +1,7 @@
 - display URLs of packages (#40571)
 - handle gracefully locked RPM DB when trying to install some packages
   (#40244)
+- warn only once about priority upgrades (#39737)
 - rpmdrake:
   o do not list backports as unselected updates media in rpmdrake, not
     just in MandrivaUpdate (#35009, #40556)
